--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -3,10 +3,10 @@
 
 @if (Model.Count == 0)
 {
-    <div class="message-info">
+    @*<div class="message-info">
         <p>There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=252166">this article</a>
         for details on setting up this ASP.NET application to support logging in via external services.</p>
-    </div>
+    </div>*@
 }
 else
 {
