--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
@@ -21,8 +21,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Contacts", "Index", "Contacts")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
