--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Contacts/Index.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Contacts/Index.cshtml
@@ -2,5 +2,55 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span5">
+            <div class="control-group">
+                <label class="control-label" for="inputFirstName">First Name</label>
+                <div class="controls">
+                    <input type="text" id="inputFirstName" placeholder="First Name">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="inputLastName">Last Name</label>
+                <div class="controls">
+                    <input type="text" id="inputLastName" placeholder="Last Name">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="inputEmail">Email</label>
+                <div class="controls">
+                    <input type="text" id="inputEmail" placeholder="Email">
+                </div>
+            </div>
+            <div class="control-group">
+                <div class="controls">
+                    <button class="btn">Add</button>
+                </div>
+            </div>
+        </div>
+        <div class="span6">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Tony</td>
+                        <td>Stark</td>
+                        <td>ironman@avengers.com</td>
+                    </tr>
+                    <tr>
+                        <td>Bruce</td>
+                        <td>Banner</td>
+                        <td>hulk@avengers.com</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
