--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+<head ng-app>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Web-Stack Practice</title>
     @Styles.Render("~/Content/css")
+    @RenderSection("styles", required: false);
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -22,6 +23,7 @@
                     <ul class="nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Contacts", "Index", "Contacts")</li>
+                        <li>@Html.ActionLink("AngularJS", "Index", "Angular")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
