--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step01.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step01.cshtml
@@ -2,7 +2,22 @@
     ViewBag.Title = "Index";
 }
 
-Being built...
+<ul>
+    <li>
+        <span>Nexus S</span>
+        <p>
+            Fast just got faster with Nexus S.
+        </p>
+    </li>
+    <li>
+        <span>Motorola XOOM¢â with Wi-Fi</span>
+        <p>
+            The Next, Next Generation tablet.
+        </p>
+    </li>
+</ul>
+
+<p>Total number of phones: 2</p>
 
 @section scripts {
     @Scripts.Render("~/Scripts/angular.js")
