--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step01.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step01.cshtml
@@ -1,5 +1,6 @@
 @{
-    ViewBag.Title = "Index";
+    Layout = "~/Views/Angular/_Layout.cshtml";
+    ViewBag.Title = "Step01";
 }
 
 <ul>
@@ -18,7 +19,3 @@
 </ul>
 
 <p>Total number of phones: 2</p>
-
-@section scripts {
-    @Scripts.Render("~/Scripts/angular.js")
-}
