--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Contacts", "Index", "Contacts")</li>
                         <li>@Html.ActionLink("AngularJS", "Index", "Angular")</li>
+                        <li>@Html.ActionLink("Jasmine", "Run", "Jasmine")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
