--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step02.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step02.cshtml
@@ -15,6 +15,6 @@
 @section scripts {
     @Scripts.Render("~/Scripts/Angular/Step02.js")
     <script type="text/javascript">
-        $('html').attr('ng-app', 'phonecatApp');
+        $('html').attr('ng-app', 'phonecatAppStep02');
     </script>
 }
