--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Jasmine/SpecRunner.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Jasmine/SpecRunner.cshtml
@@ -9,19 +9,18 @@
 }
 
 @section scripts {
+    @Scripts.Render("~/Scripts/sinon-1.7.3.js")
+
     <script type="text/javascript" src="/Scripts/jasmine/jasmine.js"></script>
     <script type="text/javascript" src="/Scripts/jasmine/jasmine-html.js"></script>
 
+    @Scripts.Render("~/Scripts/knockout-2.3.0.js")
     @Scripts.Render("~/Scripts/angular.js")
 
-    <!-- include source files here... -->
-    <script type="text/javascript" src="/Scripts/jasmine-samples/SpecHelper.js"></script>
-    <script type="text/javascript" src="/Scripts/jasmine-samples/PlayerSpec.js"></script>
-    @Scripts.Render("~/Scripts/Angular/Step02.js")
+    @Scripts.Render("~/Scripts/ViewModels/Contacts.js")
+    @Scripts.Render("~/Scripts/ViewModels/Contacts.spec.js")
 
-    <!-- include spec files here... -->
-    <script type="text/javascript" src="/Scripts/jasmine-samples/Player.js"></script>
-    <script type="text/javascript" src="/Scripts/jasmine-samples/Song.js"></script>
+    @Scripts.Render("~/Scripts/Angular/Step02.js")
     @Scripts.Render("~/Scripts/Angular/Step02.spec.js")
 
     <script type="text/javascript">
@@ -43,7 +42,6 @@
             function execJasmine() {
                 jasmineEnv.execute();
             }
-
         })();
     </script>
 }
