--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step02.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Angular/Step02.cshtml
@@ -10,11 +10,17 @@
             <p>{{phone.snippet}}</p>
         </li>
     </ul>
+    <p>Total number of phones: {{phones.length}}</p>
+    <p>{{hello}}</p>
+    <table>
+        <tr><th>row number</th></tr>
+        <tr ng-repeat="i in [0, 1, 2]"><td>{{i + 1}}</td></tr>
+    </table>
 </div>
 
 @section scripts {
     @Scripts.Render("~/Scripts/Angular/Step02.js")
     <script type="text/javascript">
-        $('html').attr('ng-app', 'phonecatAppStep02');
+        $('html').attr('ng-app', 'phonecatApp');
     </script>
 }
