--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Jasmine/Index.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Jasmine/Index.cshtml
@@ -17,16 +17,10 @@
     @Scripts.Render("~/Scripts/knockout-2.3.0.js")
     @Scripts.Render("~/Scripts/angular.js")
     @Scripts.Render("~/Scripts/angular-mocks.js")
-    @Scripts.Render("~/Scripts/angular-animate.js")
-    @Scripts.Render("~/Scripts/angular-cookies.js")
-    @Scripts.Render("~/Scripts/angular-resource.js")
-    @Scripts.Render("~/Scripts/angular-route.js")
-    @Scripts.Render("~/Scripts/angular-sanitize.js")
-    @Scripts.Render("~/Scripts/angular-touch.js")
 
 
-    @*@Scripts.Render("~/Scripts/ViewModels/Contacts.js")
-    @Scripts.Render("~/Scripts/ViewModels/Contacts.spec.js")*@
+    @Scripts.Render("~/Scripts/ViewModels/Contacts.js")
+    @Scripts.Render("~/Scripts/ViewModels/Contacts.spec.js")
 
     @Scripts.Render("~/Scripts/Angular/Step02.js")
     @Scripts.Render("~/Scripts/Angular/Step02.spec.js")
