--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Contacts", "Index", "Contacts")</li>
                         <li>@Html.ActionLink("AngularJS", "Index", "Angular")</li>
-                        <li>@Html.ActionLink("Jasmine", "Run", "Jasmine")</li>
+                        <li>@Html.ActionLink("Jasmine", "Index", "Jasmine")</li>
+                        <li>@Html.ActionLink("Angular Scenario", "Index", "AngularScenario")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
