--- a/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
+++ b/AspNetStack/.NET 4.5/AspNetStack/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Web-Stack Practice</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @RenderSection("styles", required: false)
     @Scripts.Render("~/bundles/modernizr")
