--- a/AspNet/AspNetStack/Views/AngularScenario/Index.cshtml
+++ b/AspNet/AspNetStack/Views/AngularScenario/Index.cshtml
@@ -7,3 +7,4 @@
 <script src="~/Scripts/angular-scenario.js" ng-autotest></script>
 
 @Scripts.Render("~/Scripts/Angular/Step03.e2e.js")
+@Scripts.Render("~/Scripts/Angular/Step04.e2e.js")
