--- a/AspNet/AspNetStack/Views/Jasmine/Index.cshtml
+++ b/AspNet/AspNetStack/Views/Jasmine/Index.cshtml
@@ -24,6 +24,9 @@
     @Scripts.Render("~/Scripts/Angular/Step02.js")
     @Scripts.Render("~/Scripts/Angular/Step02.spec.js")
 
+    @Scripts.Render("~/Scripts/Angular/Step04.js")
+    @Scripts.Render("~/Scripts/Angular/Step04.spec.js")
+
     <script type="text/javascript">
         (function () {
             var jasmineEnv = jasmine.getEnv();
